kubernetes/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: dev-connect-gateway-dev01
  namespace: dev-connect
  labels:
    app.kubernetes.io/name: dev-connect-gateway
    app.kubernetes.io/instance: dev01
    app.kubernetes.io/part-of: dev-connect
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: dev-connect-gateway
      app.kubernetes.io/instance: dev01
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: dev-connect
      ports:
        - protocol: TCP
          port: 2222
  egress:
    - to:
        - ipBlock:
            cidr: 10.20.30.42/32
      ports:
        - protocol: TCP
          port: 22
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
